Jun 03 2003  2.9.1  Stubbed FetchChannel
                    Fixed include in PanelFront for OSX
                    Added CXX and LD flags for Viha
                    Added detection of system-level nongnu getopt
                    Removed CXX flags for viha, only need ld
Jun 01 2003  2.9.1  Increased delay between kismet_server and kismet_client in
                     the main script
May 31 2003  2.9.1  Integrated channel hopper with kismet_server
                    Implemented initial channel set code
                    Fixed error output for childpacket read failure
                    Fixed capture source len0 packet problems
May 30 2003  2.9.1  Fixed gpsmap -Z blowing up if no parameter given.
May 27 2003  2.9.1  Fixed ssid len=32 management packets being flagged as noise
                    Defined new channel hopping config file format (subject to
                     change during implementation)
May 24 2003  2.9.1  Removed sequence spoof detector (for now) since it didn't
                     do much useful
                    Added disassociate/deauth spoof detector
                    Documented other alerts
May 23 2003  2.9.1  Added drone server-side flush/resync
                    Added pcap and prism2_legacy engine channel control
                    Fixed makefile running checkconfig twice and
                     checkdroneconfig never.
                    File reorganization.
May 22 2003  2.9.1  Absorbed kismet_monitor into kismet_server, changed suid
                     root behavior.  READ THE DOCS.
May 21 2003  2.9.1  First major rewrite to the packet path.  kismet_monitor
                     and kismet_hopper are still required.  See blog entry 
                     for more details.
                    Fixed flaw in alert protocol preventing the client from
                     reporting alerts at all.
                    Merged WSP100 keepalive patch from Chris Waters
May 18 2003  2.9.1  Added -fno-stack-prot to openbsd cflags